@@ -288,4 +288,13 @@ AC_SUBST(DEBUG)
 AC_SUBST(CFLAGS)
 AC_SUBST(PROFILE)
 
-AC_OUTPUT(Makefile src/Makefile doc/Makefile doc/ogg/Makefile include/Makefile include/ogg/Makefile include/ogg/config_types.h win32/Makefile debian/Makefile ogg.pc)
+AC_OUTPUT([
+Makefile
+src/Makefile
+doc/Makefile doc/ogg/Makefile
+include/Makefile include/ogg/Makefile include/ogg/config_types.h
+win32/Makefile
+debian/Makefile
+ogg.pc
+ogg-uninstalled.pc
+])
