@@ -1,7 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-AUTOMAKE_OPTIONS = foreign 1.6
-
 oggincludedir = $(includedir)/ogg
 
 ogginclude_HEADERS = ogg.h os_types.h
